# aula_19

./: anotações.txt  exemplo.py  pyproject.toml  test.db
