[tool.poetry]
name = "aula-19"
version = "0.1.0"
description = ""
authors = ["Matheus"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
requests = "^2.32.3"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
